--- a/properties/annotationvalue.properties
+++ b/properties/annotationvalue.properties
@@ -28,5 +28,7 @@ d1.markPlayerMiss=Player miss recorded!
 d1.markOpponentHit=Opponent hit recorded!
 d1.markOpponentMiss=Opponent miss recorded!
 d1.opponentTurn=Opponent is on the turn.
+d1.playerTurn=Player is on the turn.
 d1.instantiateOpponent=Instantiation of Opponent
 d1.instantiatePlayer=Instantiation of Player
+d1.isFinalState=Is in final state?
