Extending solution to handle variability

--- a/properties/annotationvalue.properties
+++ b/properties/annotationvalue.properties
@@ -30,5 +30,11 @@ d1.markOpponentMiss=Opponent miss recorded!
 d1.opponentTurn=Opponent is on the turn.
 d1.playerTurn=Player is on the turn.
 d1.instantiateOpponent=Instantiation of Opponent
+d1.instantiateOpponentJoin= Instantiation of Opponent Join
 d1.instantiatePlayer=Instantiation of Player
 d1.isFinalState=Is in final state?
+
+
+d1.playerAsOpponentVariability=Should computer substitute opponent as player?
+d1.computerOpponentInstantiation=Instantiate opponent as computer
+
