Extending by putting void branch and trying aspects reachability

--- a/properties/annotationvalue.properties
+++ b/properties/annotationvalue.properties
@@ -35,6 +35,11 @@ d1.instantiatePlayer=Instantiation of Player
 d1.isFinalState=Is in final state?
 
 
+d1.statisticCollector=Should collect statistics?
+d1.void=Void
+d1.collectStatistics=Collects statistics about game
+d1.statisticsMerge=Statistics merge
+
 d1.playerAsOpponentVariability=Should computer substitute opponent as player?
 d1.computerOpponentInstantiation=Instantiate opponent as computer
 
